--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,8 @@
 	templated.co @templatedco
 	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
 */
-@import url("font-awesome.min.css");
+/*@import url("font-awesome.min.css");*/
+@import url("./font-awesome/css/font-awesome.min.css");
 @import url("http://fonts.googleapis.com/css?family=Raleway:100,200,300,400,500,600,700,800,900");
 
 /* Basic */
