--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,8 @@
 */
 /*@import url("font-awesome.min.css");*/
 @import url("./font-awesome/css/font-awesome.min.css");
-@import url("http://fonts.googleapis.com/css?family=Raleway:100,200,300,400,500,600,700,800,900");
+
+/*@import url("http://fonts.googleapis.com/css?family=Raleway:100,200,300,400,500,600,700,800,900");*/
 
 /* Basic */
 
