--- a/css/style.css
+++ b/css/style.css
@@ -609,10 +609,11 @@
 
 	#main {
 		padding: 6em 0;
-	}
+	}	
 
 		#main .sidebar .major {
 			padding-bottom: 2em;
+			
 		}
 
 			#main .sidebar .major h2 {
@@ -629,6 +630,12 @@
 
 		#main .sidebar > :first-child {
 			margin-bottom: 3em;
+			padding-top: 1em;
+			padding-bottom: 1em;
+			padding-left: 1em;
+			padding-right: 1em;
+			background: #f2f2f2;
+			border-radius:20px;
 		}
 
 /* Footer */
