--- a/_sass/_02_settings_typography.scss
+++ b/_sass/_02_settings_typography.scss
@@ -11,18 +11,16 @@ Modular Scale › http://www.modularscale.com//?16,36&px&1.25&web&table
 
 @import "functions"; // Allows the use of rem-calc() or lower-bound() in your settings
 
-
-
 /* Fonts
 ------------------------------------------------------------------- */
 
 $base-font-size: 16px;
 $rem-base: $base-font-size;
 // $base-line-height is 24px while $base-font-size is 16px
-$base-line-height: 1.5 !default;
+$base-line-height: 1.75 !default;
 
 
-$font-family-sans-serif: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
+$font-family-sans-serif: 'HelveticaNeue', 'Arial', 'sans-serif'; //"Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
 $font-family-serif: "Volkhov", Georgia, Times, serif;
 $font-family-monospace: "Lucida Console", Monaco, monospace;
 
@@ -30,8 +28,8 @@ $body-font-family: $font-family-sans-serif;
 $body-font-weight: normal;
 $body-font-style: normal;
 
-$header-font-family: $font-family-serif;
-
+$header-font-family: $font-family-sans-serif;
+$header-font-weight: bold;
 
 
 /* Font Weight
