--- a/_sass/_07_layout.scss
+++ b/_sass/_07_layout.scss
@@ -306,7 +306,6 @@ body.video cite { color: #fff; }
 .credits a {
     color: $subfooter-link-color;
     border: 0;
-    text-transform: uppercase;
     &:hover {
         color: #fff;
   }
@@ -315,20 +314,23 @@ body.video cite { color: #fff; }
 .social-icons {
     margin-bottom: 10px !important;
 
+
 // Beware of SCSS-Syntax here
   li {
     padding: 0 0 20px 0;
   }
   a {
-    font-size: rem-calc(23);
+    font-size: rem-calc(30);
     display: block;
-    width: 36px;
+    border: 10px solid $subfooter-color;
     border-radius: 50%;
     color: $subfooter-bg;
     background: $subfooter-color;
     text-align: center;
+    vertical-align: middle;
     &:hover {
       background: $subfooter-bg;
+      border: 10px solid  $subfooter-bg;
       color: #fff;
     }
   }
@@ -355,9 +357,23 @@ body.video cite { color: #fff; }
 .b60 { margin-bottom: 60px !important; }
 
 .l15 { margin-left: 15px !important; }
+.l30 { margin-left: 30px !important; }
 .r15 { margin-right: 15px !important; }
 
 .pl20 { padding-left: 20px !important; }
 .pr5  { padding-right: 5px !important; }
 .pr10 { padding-right: 10px !important; }
 .pr20 { padding-right: 20px !important; }
+
+/* page-row */
+// resolves annoying rem max-width in row
+
+.page-row {
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 0;
+    margin-bottom: 0;
+    max-width: 80%;
+    display: table;
+}
