--- a/_sass/_09_elements.scss
+++ b/_sass/_09_elements.scss
@@ -250,3 +250,41 @@ img.lazy {
   background-color: #8eb3b2;
   color: white;
 }
+
+/* Rating bar */
+/* The bar container */
+.bar-container {
+  width: 110px;
+  background-color: $grey-3;
+}
+
+/* Individual bars */
+.bar-5 {
+  width: 100%;
+  height: 18px;
+  background-color: $ci-1;
+}
+
+.bar-4 {
+  width: 80%;
+  height: 18px;
+  background-color: $ci-1;
+}
+
+.bar-3 {
+  width: 60%;
+  height: 18px;
+  background-color: $ci-1;
+}
+
+.bar-2 {
+  width: 40%;
+  height: 18px;
+  background-color: $ci-1;
+}
+
+.bar-1 {
+  width: 20%;
+  height: 18px;
+  background-color: $ci-1;
+}
