remove contact from cv

--- a/_includes/_sidebar_cv.html
+++ b/_includes/_sidebar_cv.html
@@ -2,15 +2,15 @@
 	<div class="panel radius">
 
 		<!-- Contact detail -->
-		<h4>Contact detail</h4>
+		<!-- <h4>Contact detail</h4>
 		Leeds Institute for Data Analytics <br>
 		Level 11, Worsley Building <br>
 		Clarendon Way <br>
 		Leeds, UK <br>
-		p.ternesdallagnollo@leeds.ac.uk <br>
+		p.ternesdallagnollo@leeds.ac.uk <br> -->
 
 		<!-- Useful links -->
-		<h4 class="t60">Useful links</h4>
+		<!-- <h4 class="t60">Useful links</h4>
 		<ul>
 			<li><a href="https://arc.leeds.ac.uk/">Research Computing Homepage</a></li>
 			<li><a href="https://www.linkedin.com/in/patricia-ternes/">LinkedIn</a></li>
@@ -19,10 +19,10 @@
 			<li><a href="http://lattes.cnpq.br/9063755717694210">Lattes</a></li>
 			<li><a href="https://github.com/patricia-ternes">GitHub</a></li>
 
-		</ul>
+		</ul> -->
 
 		<!-- Technical Skills -->
-		<h4 class="t60">Technical Skills</h4>
+		<h4 class="t10">Technical Skills</h4>
 
 		<!-- Languages -->
 		<h5 class="t50 b15 l15">Languages</h5>
