--- a/_sass/_09_elements.scss
+++ b/_sass/_09_elements.scss
@@ -288,3 +288,24 @@ img.lazy {
   height: 18px;
   background-color: $ci-1;
 }
+
+/* Form style */
+/* Add a background color and some padding around the form */
+.contactform {
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 20px;
+}
+/* Style the submit button with a specific background color etc */
+input[type=submit] {
+  background-color: #8EB3B2;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+/* When moving the mouse over the submit button, add a darker green color */
+input[type=submit]:hover {
+  background-color: #045753; // dark turquoise;
+}
